feat(api): add get bot info method
