# api/bot.go
@@ -1,11 +1,13 @@
 package api
 
 import (
+	"github.com/bots-house/birzzha/api/gen/models"
 	botops "github.com/bots-house/birzzha/api/gen/restapi/operations/bot"
 
 	"github.com/bots-house/birzzha/pkg/log"
 	"github.com/bots-house/birzzha/pkg/tg"
 	"github.com/go-openapi/runtime/middleware"
+	"github.com/go-openapi/swag"
 	"github.com/tomasen/realip"
 )
 
@@ -26,4 +28,14 @@ func (h *Handler) handleBotUpdate(params botops.HandleUpdateParams) middleware.R
 	}
 
 	return botops.NewHandleUpdateOK()
+}
+
+func (h *Handler) getBotInfo(params botops.GetBotInfoParams) middleware.Responder {
+	bot := h.Bot.Client().Self
+
+	return botops.NewGetBotInfoOK().WithPayload(&models.BotInfo{
+		Name:         swag.String(bot.FirstName),
+		Username:     swag.String(bot.UserName),
+		AuthDeepLink: swag.String("login"),
+	})
 }
